# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helper.rs  subscriptions.rs
