[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
config = "0.13"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.22"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
fake = "2.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }

[dev-dependencies]
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.17"
serde_json = "1"
